fix: #1588 alert titles not being visible

--- a/src/scss/ui/_alerts.scss
+++ b/src/scss/ui/_alerts.scss
@@ -16,7 +16,8 @@
   color: #fff;
 
   .alert-icon,
-  .alert-link {
+  .alert-link,
+  .alert-title {
     color: inherit;
   }
 
